--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <h1>MUHAMMAD HADI ABDULLAH HARAHAP</h1>
     </header>
     <main>
-      <section id="about">
+      <section id="tentang">
         <h2>TENTANG SAYA</h2>
         <p>Saya adalah seorang web developer.</p>
       </section>
 
-      <section id="skills">
-        <h2>My Skills</h2>
+      <section id="skil">
+        <h2>Skil</h2>
         <ul>
           <li>HTML</li>
           <li>CSS</li>
@@ -26,23 +26,23 @@
       </section>
       <section id="demo">
         <h2>Interactive Demo</h2>
-        <form id="skill-form">
-          <label for="name">Nama:</label>
-          <input type="text" id="name" required="" />
-          <label for="skill">Skill:</label>
-          <select id="skill" required="">
+        <form id="skil-form">
+          <label for="nama">Nama:</label>
+          <input type="text" id="nama" required="" />
+          <label for="skil-select">Skil:</label>
+          <select id="skil-select" required="">
             <option value="HTML">HTML</option>
             <option value="CSS">CSS</option>
             <option value="JavaScript">JavaScript</option>
           </select>
           <button type="submit">Submit</button>
         </form>
-        <div id="greeting"></div>
+        <div id="hasil"></div>
       </section>
     </main>
 
     <footer>
-      <p>© Hadi_Developer</p>
+      <p>Hadi_Developer</p>
     </footer>
     <script src="index.js"></script>
   </body>
