--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <h1>MUHAMMAD HADI ABDULLAH HARAHAP</h1>
+      <img src="hadi.jpg" width="200" height="200" alt="Hadi" />
     </header>
     <main>
       <section id="tentang">
